--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "vite --host",
     "build": "vite build",
     "serve": "vite preview",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "sass": "^1.83.0",
     "vite": "^6.0.5"
   },
