--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "gh-pages": "^6.3.0",
     "sass": "^1.83.0",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-pwa": "^0.21.1"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
